# TT-Sync

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_EN.md  config.toml.example  docker-compose.yaml
.github/workflows/: build.yml  crates-publish.yml  docker-publish.yml
crates/ttsync-cli/: Cargo.toml
crates/ttsync-cli/src/: commands.rs  config.rs  launch_agent.rs  main.rs  output.rs  server_runtime.rs  systemd.rs  user_service.rs  windows_background.rs  windows_task_scheduler.rs
crates/ttsync-cli/src/tui/: app.rs  doctor.rs  effects.rs  help.rs  i18n.rs  layout.rs  mod.rs  onboard.rs  pairing.rs  peer_permissions.rs  peers.rs  serve.rs  theme.rs
crates/ttsync-cli/src/tui/components/: text_input.rs
crates/ttsync-cli/src/tui/screens/: doctor.rs  help.rs  main_menu.rs  mod.rs  onboard.rs  pairing.rs  peers.rs  placeholder.rs  serve.rs
crates/ttsync-client/: Cargo.toml
crates/ttsync-client/src/: bundle.rs  engine.rs  lib.rs  workspace.rs
crates/ttsync-contract/: Cargo.toml
crates/ttsync-contract/src/: canonical.rs  dataset.rs  lib.rs  manifest.rs  pair.rs  path.rs  peer.rs  plan.rs  session.rs  status.rs  sync.rs
crates/ttsync-core/: Cargo.toml
crates/ttsync-core/src/: bundle.rs  crypto.rs  error.rs  events.rs  lib.rs  pairing.rs  plan.rs  ports.rs  scope.rs  session.rs
crates/ttsync-core/src/dataset/: catalog.rs  mod.rs  path.rs  policy.rs  profile.rs  runtime.rs
crates/ttsync-fs/: Cargo.toml
crates/ttsync-fs/src/: layout.rs  lib.rs  manifest.rs  manifest_store.rs  path_mapping.rs  peer_store.rs  writer.rs
crates/ttsync-http/: Cargo.toml
crates/ttsync-http/src/: client.rs  lib.rs  pairing_store.rs  server.rs  tls.rs
crates/ttsync-http/src/server/: auth.rs  bundle.rs  error.rs  handlers.rs  plans.rs
docs/: Architecture.md  CLI.md  CurrentState.md  Docker.md  PRD.md  TechStack.md  UpstreamContract.md
scripts/: install.ps1  install.sh
scripts/ci/: cargo_release.py
