[package]
name = "ttsync-cli"
version = "0.1.0"
description = "Command-line interface for TT-Sync remote synchronization server"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tt-sync"
path = "src/main.rs"

[dependencies]
ttsync-contract = { workspace = true }
ttsync-core = { workspace = true }
ttsync-fs = { workspace = true }
ttsync-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
