[package]
name = "tt-sync"
version = "1.0.0"
description = "Command-line interface for TT-Sync remote synchronization server"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tt-sync"
path = "src/main.rs"

[dependencies]
ttsync-contract = { workspace = true }
ttsync-core = { workspace = true }
ttsync-fs = { workspace = true }
ttsync-http = { workspace = true, features = ["server"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
rcgen = { workspace = true }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"
qrcode = "0.14"

[features]
default = []
blake3-verify = ["ttsync-fs/blake3-verify"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging"] }
