[package]
name = "ttsync-contract"
version = "1.0.0"
description = "Protocol types and wire contracts for TT-Sync v2"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
