[package]
name = "ttsync-core"
version = "0.1.0"
description = "Use-case orchestration and trait definitions for TT-Sync"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ttsync-contract = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
