[package]
name = "ttsync-fs"
version = "0.1.0"
description = "File system adapter for TT-Sync manifest scanning and atomic I/O"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ttsync-contract = { workspace = true }
ttsync-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
filetime = { workspace = true }

[features]
default = []
blake3-verify = ["dep:blake3"]

[dependencies.blake3]
workspace = true
optional = true
