[package]
name = "ttsync-http"
version = "0.1.0"
description = "HTTP server and client adapter for TT-Sync v2 protocol"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ttsync-contract = { workspace = true }
ttsync-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
rustls-pemfile = "2"
uuid = { workspace = true }
